stopped art from squishing

--- a/react-app/src/components/PlaylistDetails/PlaylistDetails.css
+++ b/react-app/src/components/PlaylistDetails/PlaylistDetails.css
@@ -16,8 +16,12 @@
     justify-content: flex-end;
 }
 
+#album-art-container {
+    width: 300px;
+}
+
 .playlist-details-art {
-    width: 20%;
+    width: 100%;
 }
 
 .playlist-name-header {
